@@ -62,6 +62,7 @@ namespace WebCore
 QT_BEGIN_NAMESPACE
 class QUndoStack;
 class QMenu;
+class QBitArray;
 QT_END_NAMESPACE
 
 class QWebPagePrivate
@@ -70,7 +71,7 @@ public:
     QWebPagePrivate(QWebPage *);
     ~QWebPagePrivate();
     void createMainFrame();
-    QMenu *createContextMenu(const WebCore::ContextMenu *webcoreMenu, const QList<WebCore::ContextMenuItem> *items);
+    QMenu *createContextMenu(const WebCore::ContextMenu *webcoreMenu, const QList<WebCore::ContextMenuItem> *items, QBitArray *visitedWebActions);
 
     QWebFrame *frameAt(const QPoint &pos) const;
 
@@ -79,7 +80,6 @@ public:
     void updateAction(QWebPage::WebAction action);
     void updateNavigationActions();
     void updateEditorActions();
-    void updateContextMenuActions(const WebCore::ContextMenu *webcoreMenu, const QList<WebCore::ContextMenuItem> *items);
 
     void timerEvent(QTimerEvent*);
     
